Endpoints añadidos
